5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1649_2711.log
== TEST (2019-04-16 18:00:15) 
-- CODE:
valor=float(input())
quantidadedetickets=int(input())
valordotickets=float(input())
quantidadedepasses=float(input())
quantidadedepassesdeonibus=float(input())
valordospasses=float(input())
if valor <(quantidadedetick)
-- ERROR:
File "XXXX", line 7
    if valor <(quantidadedetick)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 11:01:03) 
-- CODE:
valor=float(input())
quantidadedetickets=int(input())
valordotickets=float(input())
quantidadedepasses=float(input())
quantidadedepassesdeonibus=float(input())
valordospasses=float(input())
if valor <(quantidadedetick)
-- ERROR:
File "XXXX", line 7
    if valor <(quantidadedetick)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
